--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "npm run build",
     "lint": "eslint .",
     "test": "jest --coverage",
     "preview": "vite preview"
